--- a/css/style.css
+++ b/css/style.css
@@ -443,15 +443,17 @@ pre {
     word-break: normal; }
 
 .pre-scrollable {
-  max-height: 340px;
-  overflow-y: scroll; }
+  height: 60%;
+  overflow-y: auto;
+  overflow-x: hidden; }
 
 .container {
   width: 100%;
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
-  margin-left: auto; }
+  margin-left: auto; 
+  overflow-y: auto;}
   @media (min-width: 576px) {
     .container {
       max-width: 540px; } }
