--- a/css/icomoon.css
+++ b/css/icomoon.css
@@ -498,6 +498,12 @@
 .icon-twitter:before {
   content: "\f099";
 }
+.icon-linkedin-square:before{
+  content: "\f100";
+}
+.icon-linkedin:before{
+  content: "\f101";
+}
 .icon-facebook:before {
   content: "\f09a";
 }
